--- a/src/components/post-list-item/post-list-item.css
+++ b/src/components/post-list-item/post-list-item.css
@@ -42,6 +42,11 @@
   color: #FFD700;
 }
 
+.app-list-item.like .app-list-item-label {
+  color: rgb(62, 224, 17);
+  text-decoration: line-through;
+}
+
 .app-list-item.important .btn-star {
     color: #FFD700;
 }
